# realtime-py

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Exceptions.py  LICENSE  Makefile  README.md  async-usage.py  channel.py  connection.py  constants.py  fd-usage.py  flake.nix  messages.py  pyproject.toml  requirements.txt  sending-receiving-usage.py  setup.py  test_realtime_client.py  test_realtime_subscription.py  usage.py
.github/: CODEOWNERS
.github/workflows/: ci-python.yml  ci.yml  stale.yml
docs/realtime/: channel.html  index.html  messages.html  realtime.html  search.js  usage.html
example/: README.md  app.py  pyproject.toml
example/supabase/: config.toml  seed.sql
html/realtime/: connection.html
realtime/: __init__.py  channel.py  client.py  connection.py  exceptions.py  logging_util.py  message.py  mongo_client.py  presence.py  push.py  timer.py  transformers.py  twilio_client.py  types.py  version.py
realtime/_async/: channel.py  client.py  presence.py  push.py  timer.py
realtime/_sync/: channel.py  client.py  presence.py  push.py  timer.py
realtime_py/: .__init__.py.un~  __init__.py  channel.py  connection.py  constants.py  message.py  push.py  realtime_client.py  realtime_subscription.py  serializer.py  transformers.py
tests/: test_connection.py  test_presence.py  test_realtime_channel.py  test_timer.py  tests_close.py  tests_type.py  type_test.py
tests/supabase/migrations/: 20240810125543_init.sql
