[tool.poetry]
name = "realtime"
version = "2.4.2" # {x-release-please-version}
description = ""
authors = [
    "Joel Lee <joel@joellee.org>",
    "Andrew Smith <a.smith@silentworks.co.uk>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/supabase/realtime-py"

[tool.poetry.dependencies]
python = "^3.9"
websockets = ">=11,<15"
python-dateutil = "^2.8.1"
typing-extensions = "^4.12.2"
aiohttp = "^3.11.14"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
pytest-cov = "^5.0.0"
python-dotenv = "^1.0.1"
pytest-asyncio = "^0.25.3"
coveralls = "^3.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.11,<26.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
