[tool.poetry]
name = "realtime"
version = "2.5.0" # {x-release-please-version}
description = ""
authors = [
    "Joel Lee <joel@joellee.org>",
    "Andrew Smith <a.smith@silentworks.co.uk>",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/supabase/realtime-py"

[tool.poetry.dependencies]
python = "^3.9"
websockets = ">=11,<16"
python-dateutil = "^2.8.1"
typing-extensions = "^4.13.2"
aiohttp = "^3.11.18"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^5.0.0"
python-dotenv = "^1.1.0"
pytest-asyncio = "^0.26.0"
coveralls = "^3.0.0"
black = ">=23.11,<26.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
