[project]
name = "realtime"
version = "2.5.3" # {x-release-please-version}
description = ""
authors = [
    { name = "Joel Lee", email="joel@joellee.org"},
    { name = "Andrew Smith", email="a.smith@silentworks.co.uk"},
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/supabase/realtime-py"
requires-python = ">=3.9"
dependencies = [
  "websockets >=11,<16",
  "typing-extensions >=4.14.0",
]

[tool.poetry.group.dev.dependencies]
aiohttp = "^3.12.13"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
python-dotenv = "^1.1.1"
pytest-asyncio = "^1.0.0"
pre-commit = "^4.2.0"
ruff = "^0.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  # "B",
  # flake8-simplify
  # "SIM",
  # isort
  "I",
]
ignore = ["F401", "F403", "F841", "E712", "E501", "E402", "UP006", "UP035"]
# isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
